<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <!-- Back Button -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="32dp">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back_button" />

        <!-- Title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/btnBack"
            android:layout_alignParentTop="true"
            android:layout_marginStart="95dp"
            android:text="@string/album_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <!-- Menu Button -->
        <ImageView
            android:id="@+id/btnMenu"
            android:layout_toEndOf="@id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="75dp"
            android:layout_centerVertical="true"
            android:src="@drawable/menu_24"
            android:contentDescription="@string/menu_button" />
    </RelativeLayout>


    <!-- Album Art -->
    <ImageView
        android:id="@+id/albumArt"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:src="@drawable/album_art"
        android:contentDescription="@string/album_cover"
        android:scaleType="fitCenter" />



    <!-- Progress Bar -->
    <SeekBar
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/albumArt"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:progress="0"
        android:progressTint="@color/yellow"
        android:thumbTint="@color/yellow"
        android:max="100" />

    <!-- Artist Name -->
    <TextView
        android:id="@+id/artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/slider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/song_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <!-- Song Title -->
    <TextView
        android:id="@+id/songTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/artistName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/artist"
        android:textColor="@color/yellow"
        android:textSize="18sp" />

    <!-- Previous Button -->
    <ImageButton
        android:id="@+id/btnPrevious"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/songTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/skip_previous_24"
        android:contentDescription="@string/prev_button" />

    <!-- Play Button -->
    <ImageButton
        android:id="@+id/btnPlay"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_below="@id/songTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:background="@drawable/play_circle_24"
        android:contentDescription="@string/play_button" />

    <!-- Next Button -->
    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/songTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/baseline_skip_next_24"
        android:contentDescription="@string/next_button" />

</RelativeLayout>
